# rw-engineering-exploration

./: Cargo.toml  Dockerfile  LICENSE  README.md  dev-server.sh  server.sh
backend/: Cargo.toml
backend/src/: blog.rs  env.rs  main.rs  people.rs
backend/src/auth/: auth_guard.rs  login.rs  logout.rs  mod.rs  profile.rs  sessions.rs  signup.rs  user_collection.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/auth/: email.rs  mod.rs  password.rs  person.rs  user.rs
common/src/models/: base64_files.rs  blog.rs  component.rs  display_state.rs  mod.rs  project.rs  user.rs
docker/: reverse-proxy-main.conf  reverse-proxy.conf
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  env.rs  main.rs  navbar.rs  people.rs  route.rs  test.rs
frontend/src/auth/: auth_form.rs  login.rs  logout.rs  mod.rs  profile.rs  signup.rs
frontend/src/blog/: blog_post.rs  create.rs  mod.rs  view_blog.rs
frontend/src/lib/: api_request.rs
frontend/src/util/: auth_reload.rs  mod.rs
