[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["secrets"]}
common = {path = "../common", features = ["bcrypt", "database"]}
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
mongodb = "2.6.1"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
cloud-storage = "0.10"
base64 = "0.21.4"
