[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
bcrypt = { version = "0.15", optional = true } 
mongodb = { version = "2.6.1" , optional = true}
uuid = { version = "1.4.1", features = ["v4", "js", "serde"]}
chrono = { version = "0.4.31", features = ["wasmbind", "serde"]} 

[features]
bcrypt = ["dep:bcrypt"]
database = ["dep:mongodb"]
