[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
gloo-net = "0.4.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
common = {path = "../common"}
serde_json = "1.0.107"
wasm-cookies = "0.2.1"
markdown = "1.0.0-alpha.13"
